--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,29 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.studio.jason.jframe" >
+    package="com.studio.jason.jframe">
 
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:name=".MyApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme">
         <activity
             android:name=".MainActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name">
+
+        </activity>
+        <activity
+            android:name=".SwipeActivity"
+            android:theme="@style/AppSecTheme" />
+        <activity
+            android:name=".SwipeSecActivity"
+            android:theme="@style/AppSecTheme" />
+        <activity
+            android:name=".GuideActivity"
+            android:theme="@style/AppSecTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
+
             </intent-filter>
         </activity>
-        <activity android:name=".SwipeActivity"
-            android:theme="@style/AppSecTheme"/>
-        <activity android:name=".SwipeSecActivity"
-            android:theme="@style/AppSecTheme"/>
     </application>
 
 </manifest>
