--- a/jframework/build.gradle
+++ b/jframework/build.gradle
@@ -21,4 +21,5 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:22.2.0'
+    compile files('src/libs/gson-2.3.1.jar')
 }
