--- a/jframework/build.gradle
+++ b/jframework/build.gradle
@@ -23,4 +23,5 @@ dependencies {
     compile 'com.android.support:appcompat-v7:22.2.0'
     compile files('src/libs/gson-2.3.1.jar')
     compile 'com.android.support:recyclerview-v7:23.0.1'
+    compile 'com.android.support:cardview-v7:23.0.1'
 }
