--- a/jframework/src/main/AndroidManifest.xml
+++ b/jframework/src/main/AndroidManifest.xml
@@ -2,8 +2,7 @@
     package="com.studio.jframework">
 
     <application
-        android:allowBackup="true"
-        android:label="@string/app_name">
+        android:allowBackup="true">
     </application>
 
 </manifest>
