--- a/staticapp/src/main/AndroidManifest.xml
+++ b/staticapp/src/main/AndroidManifest.xml
@@ -2,14 +2,16 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.administrator.staticapp" >
 
+    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:label="@string/app_name" >
         <activity
             android:name=".DrawerActivity"
             android:label="@string/app_name"
+            android:theme="@style/AppTheme"
             android:windowSoftInputMode="adjustResize">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -17,7 +19,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".TabActivity"/>
+        <activity android:name=".TabActivity"
+            android:theme="@style/AppTheme2"/>
+        <activity android:name=".DetailActivity"
+            android:theme="@style/AppTheme2"/>
+        <service android:name=".BackgroundService" />
     </application>
 
 </manifest>
